Keep less padding on small screens around messages and prevent long words and links from overflowing in messager content

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.word-wrap {
+	white-space: wrap;
+	word-break: break-word;
+}
